--- a/ebooks/history_yy/qingshiyanyi/002.htm
+++ b/ebooks/history_yy/qingshiyanyi/002.htm
@@ -119,7 +119,7 @@
 历代开国之初，必溯其如何祯祥？如何奇异？真是谬论。是回叙天女产子、朱果呈祥等事，
 皆隐隐指为荒诞，足以辟除世人一般迷信，不得以稗官小说目之。
 <p><hr>
-<center><A HREF="001.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="003.htm">下一回</A></center>
+<center><A HREF="001.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="003.htm">下一回</A></center>
 
 </body>
 </html>
