--- a/ebooks/history_yy/qingshiyanyi/003.htm
+++ b/ebooks/history_yy/qingshiyanyi/003.htm
@@ -157,7 +157,7 @@
 主，然皆由激厉而成。古所谓生于忧患、死于安乐者，于此可见矣。文中运实于虚，写得英
 采动人，确是妙笔。
 <p><hr>
-<center><A HREF="002.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="004.htm">下一回</A></center>
+<center><A HREF="002.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="004.htm">下一回</A></center>
 
 </body>
 </html>
