--- a/ebooks/history_yy/qingshiyanyi/004.htm
+++ b/ebooks/history_yy/qingshiyanyi/004.htm
@@ -169,7 +169,7 @@
 出兵以后，复用一庸驽之杨镐，经略辽东，委二十万军于辽塞，是非明之自取其亡耶？明之
 亡在此，满洲之兴亦即在此。是此回为明清兴亡关键，故作者亦叙述独详，不稍渗漏。
 <p><hr>
-<center><A HREF="003.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="005.htm">下一回</A></center>
+<center><A HREF="003.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="005.htm">下一回</A></center>
 
 </body>
 </html>
