--- a/ebooks/history_yy/qingshiyanyi/005.htm
+++ b/ebooks/history_yy/qingshiyanyi/005.htm
@@ -183,7 +183,7 @@
 镇辽无人，满军自乘间而入。明之祸，满洲之福也。虽曰天命，宁非人事？本回章法，实是
 一篇熊、孙合传，而袁应泰、王化贞等，皆陪宾也。
 <p><hr>
-<center><A HREF="004.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="006.htm">下一回</A></center>
+<center><A HREF="004.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="006.htm">下一回</A></center>
 
 </body>
 </html>
