--- a/ebooks/history_yy/qingshiyanyi/006.htm
+++ b/ebooks/history_yy/qingshiyanyi/006.htm
@@ -146,7 +146,7 @@
 非以议和为久计者。然清太宗亦一英雄，与崇焕不相上下，书牍往还，无非虚语，读其文，
 可以窥其心。
 <p><hr>
-<center><A HREF="005.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="007.htm">下一回</A></center>
+<center><A HREF="005.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="007.htm">下一回</A></center>
 
 </body>
 </html>
