--- a/ebooks/history_yy/qingshiyanyi/008.htm
+++ b/ebooks/history_yy/qingshiyanyi/008.htm
@@ -159,7 +159,7 @@
 塞，不得谓非崇焕疏忽之咎。然勤王诏下，即兼程前进，忠勇若此，而崇祯帝多疑好猜，竟
 信阉竖之谗，误堕敌人之计，崇焕下狱，满桂阵亡，明之不亡亦仅矣。读此回令人嗟叹不置。
 <p><hr>
-<center><A HREF="007.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="009.htm">下一回</A></center>
+<center><A HREF="007.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="009.htm">下一回</A></center>
 
 </body>
 </html>
