--- a/ebooks/history_yy/qingshiyanyi/009.htm
+++ b/ebooks/history_yy/qingshiyanyi/009.htm
@@ -154,7 +154,7 @@
 幸，而作成之耳。虽曰天命，宁非人事？惟清室二百数十年之国祚，由太宗之获玺称尊始。
 故书中特详述之，所以志始也。
 <p><hr>
-<center><A HREF="008.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="010.htm">下一回</A></center>
+<center><A HREF="008.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="010.htm">下一回</A></center>
 
 </body>
 </html>
