--- a/ebooks/history_yy/qingshiyanyi/010.htm
+++ b/ebooks/history_yy/qingshiyanyi/010.htm
@@ -168,7 +168,7 @@
 又为权阉所忌，迫死疆场。谁为人主，而昏愦至死？故人谓亡明者熹宰，吾谓熹宗犹不足亡
 明，亡明者实崇祯帝。
 <p><hr>
-<center><A HREF="009.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="011.htm">下一回</A></center>
+<center><A HREF="009.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="011.htm">下一回</A></center>
 
 </body>
 </html>
