--- a/ebooks/history_yy/qingshiyanyi/011.htm
+++ b/ebooks/history_yy/qingshiyanyi/011.htm
@@ -175,7 +175,7 @@
 衄。清军虽强，岂真无敌？咎在将帅之非材。且镐止丧师，洪且降清，洪之罪益浮于镐矣，
 读《贰臣传》，可知洪承畴之事迹，读此书，更见洪承畴之心术。
 <p><hr>
-<center><A HREF="010.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="012.htm">下一回</A></center>
+<center><A HREF="010.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="012.htm">下一回</A></center>
 
 </body>
 </html>
