--- a/ebooks/history_yy/qingshiyanyi/012.htm
+++ b/ebooks/history_yy/qingshiyanyi/012.htm
@@ -163,7 +163,7 @@
 出死力，皆孝庄后有以笼络之，然则孝庄后固一代尤物乎？明亡清继，成于一妇人之手，吾
 訾其德，吾服其才。
 <p><hr>
-<center><A HREF="011.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="013.htm">下一回</A></center>
+<center><A HREF="011.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="013.htm">下一回</A></center>
 
 </body>
 </html>
