--- a/ebooks/history_yy/qingshiyanyi/013.htm
+++ b/ebooks/history_yy/qingshiyanyi/013.htm
@@ -195,7 +195,7 @@
 事满清，甘心剃发，且愿为先导，拼命穷追，激成李闯之怒，戮其父母妻孥。不忠不孝，三
 桂一人实兼之。读本回如燃犀照奸，直穷其隐。
 <p><hr>
-<center><A HREF="012.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="014.htm">下一回</A></center>
+<center><A HREF="012.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="014.htm">下一回</A></center>
 
 </body>
 </html>
