--- a/ebooks/history_yy/qingshiyanyi/015.htm
+++ b/ebooks/history_yy/qingshiyanyi/015.htm
@@ -162,7 +162,7 @@
 酒。胡儿南下，四镇抛戈，徒一憗遗之史阁部，怀才莫试，茹苦含辛，卒抗节扬州城下，岂
 不哀哉？本回全为史阁部写照，历表忠悃，令人不忍卒读。
 <p><hr>
-<center><A HREF="014.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="016.htm">下一回</A></center>
+<center><A HREF="014.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="016.htm">下一回</A></center>
 
 </body>
 </html>
