--- a/ebooks/history_yy/qingshiyanyi/016.htm
+++ b/ebooks/history_yy/qingshiyanyi/016.htm
@@ -155,7 +155,7 @@
 气节。至鲁王监国，唐王称帝，故明遗老，多投袂而起，力图规复，事虽不成，志实可嘉。
 阎典史以区区微官，死守孤城八十日，尤见忠诚。本回直叙事实，而详略不同，亦费斟酌。
 <p><hr>
-<center><A HREF="015.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="017.htm">下一回</A></center>
+<center><A HREF="015.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="017.htm">下一回</A></center>
 
 </body>
 </html>
