--- a/ebooks/history_yy/qingshiyanyi/017.htm
+++ b/ebooks/history_yy/qingshiyanyi/017.htm
@@ -163,7 +163,7 @@
 诛殛，而必假手于清军耶？清豪格为明诛马阮，复为川民戮献忠，系清帅中之最得人心者，
 乃偏令其衅起帷房，不得其死，天耶人耶？帝阍何处，欲问无从，读本回，令人感叹不置。
 <p><hr>
-<center><A HREF="016.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="018.htm">下一回</A></center>
+<center><A HREF="016.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="018.htm">下一回</A></center>
 
 </body>
 </html>
