--- a/ebooks/history_yy/qingshiyanyi/018.htm
+++ b/ebooks/history_yy/qingshiyanyi/018.htm
@@ -184,7 +184,7 @@
 也。本回为何、瞿二公合传，附以张司马同敞，余皆随事叙入，为借宾定主之一法，看似夹
 杂，实则自有线索，非徒铺叙已也。
 <p><hr>
-<center><A HREF="017.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="019.htm">下一回</A></center>
+<center><A HREF="017.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="019.htm">下一回</A></center>
 
 </body>
 </html>
