--- a/ebooks/history_yy/qingshiyanyi/019.htm
+++ b/ebooks/history_yy/qingshiyanyi/019.htm
@@ -182,7 +182,7 @@
 诬得乎？冤诬臣子且不可，况夫妇乎？本回历历表明，于睿王之功过，顺治帝之得失，已跃
 然纸上。
 <p><hr>
-<center><A HREF="018.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="020.htm">下一回</A></center>
+<center><A HREF="018.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="020.htm">下一回</A></center>
 
 </body>
 </html>
