--- a/ebooks/history_yy/qingshiyanyi/020.htm
+++ b/ebooks/history_yy/qingshiyanyi/020.htm
@@ -193,7 +193,7 @@
 定国一等，故叙述亦格外生色。张煌言、张名振二人夹写在内，即为明捐躯诸遗老，亦并叙
 姓名，作者风世之心，可概见矣。文字之不苟作如此。
 <p><hr>
-<center><A HREF="019.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="021.htm">下一回</A></center>
+<center><A HREF="019.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="021.htm">下一回</A></center>
 
 </body>
 </html>
