--- a/ebooks/history_yy/qingshiyanyi/021.htm
+++ b/ebooks/history_yy/qingshiyanyi/021.htm
@@ -189,7 +189,7 @@
 心固堪共谅也。厥后中原大定，敝履尊荣，借过眼之昙花，证前途之觉果，斯正所谓大解脱
 者。明眼人浏览本章，应知所褒贬矣。
 <p><hr>
-<center><A HREF="020.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="022.htm">下一回</A></center>
+<center><A HREF="020.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="022.htm">下一回</A></center>
 
 </body>
 </html>
