--- a/ebooks/history_yy/qingshiyanyi/023.htm
+++ b/ebooks/history_yy/qingshiyanyi/023.htm
@@ -173,7 +173,7 @@
 令其长享安荣也。本回叙三桂狡诈，及圣祖英明，非颂圣祖，实病三桂，插入陈圆圆一段，
 尤足令三桂愧死。
 <p><hr>
-<center><A HREF="022.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="024.htm">下一回</A></center>
+<center><A HREF="022.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="024.htm">下一回</A></center>
 
 </body>
 </html>
