--- a/ebooks/history_yy/qingshiyanyi/024.htm
+++ b/ebooks/history_yy/qingshiyanyi/024.htm
@@ -177,7 +177,7 @@
 善辈，又皆庸懦无能，未必能返旆回援。是知辅臣之叛降，实三桂成败之关键。叙辅臣，即
 所以叙三桂也。阅本回，方见详略之间，自费斟酌。
 <p><hr>
-<center><A HREF="023.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="025.htm">下一回</A></center>
+<center><A HREF="023.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="025.htm">下一回</A></center>
 
 </body>
 </html>
