--- a/ebooks/history_yy/qingshiyanyi/025.htm
+++ b/ebooks/history_yy/qingshiyanyi/025.htm
@@ -191,7 +191,7 @@
 势，叙闽、粤及广西事，是记三桂之失援，末以称帝作总写，尽三桂一生魔障，炎炎者灭，
 隆隆者绝，世人可以醒矣。
 <p><hr>
-<center><A HREF="024.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="026.htm">下一回</A></center>
+<center><A HREF="024.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="026.htm">下一回</A></center>
 
 </body>
 </html>
