--- a/ebooks/history_yy/qingshiyanyi/027.htm
+++ b/ebooks/history_yy/qingshiyanyi/027.htm
@@ -190,7 +190,7 @@
 不同之再证乎？然彭春再出，穷年累月，不能破一雅克萨土垒。索额图原议不谐，终至让
 步，俄之强已可知已。文中一鳞一爪，莫非叙述，亦莫非眉目，在善读者默会可耳。
 <p><hr>
-<center><A HREF="026.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="028.htm">下一回</A></center>
+<center><A HREF="026.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="028.htm">下一回</A></center>
 
 </body>
 </html>
