--- a/ebooks/history_yy/qingshiyanyi/028.htm
+++ b/ebooks/history_yy/qingshiyanyi/028.htm
@@ -169,7 +169,7 @@
 毋乃骄乎！秦始皇琅琊刻石，窦车骑燕然勒铭，殊不足训。以康熙帝之明，胡为效此？假故
 事以警世，揭心迹以垂讥。作者之用意深矣。
 <p><hr>
-<center><A HREF="027.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="029.htm">下一回</A></center>
+<center><A HREF="027.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="029.htm">下一回</A></center>
 
 </body>
 </html>
