--- a/ebooks/history_yy/qingshiyanyi/029.htm
+++ b/ebooks/history_yy/qingshiyanyi/029.htm
@@ -161,7 +161,7 @@
 圣祖之德惠，不能逃千秋万世之讥。本回为清圣祖病，抑且为清圣祖惜。且隐悬一专制影
 子，留戒后世，是文字有关国体者，可谓稗官中上乘文字。
 <p><hr>
-<center><A HREF="028.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="030.htm">下一回</A></center>
+<center><A HREF="028.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="030.htm">下一回</A></center>
 
 </body>
 </html>
