--- a/ebooks/history_yy/qingshiyanyi/030.htm
+++ b/ebooks/history_yy/qingshiyanyi/030.htm
@@ -182,7 +182,7 @@
 速耶？有清一代，惟圣祖最号英明，而于绝域政教，不甚厝意，遑问自郐以下乎？阅本回，
 应令人叹惜。
 <p><hr>
-<center><A HREF="029.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="031.htm">下一回</A></center>
+<center><A HREF="029.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="031.htm">下一回</A></center>
 
 </body>
 </html>
