--- a/ebooks/history_yy/qingshiyanyi/031.htm
+++ b/ebooks/history_yy/qingshiyanyi/031.htm
@@ -179,7 +179,7 @@
 则天下事亦何在不容秘密耶？司马温公云：“事无不可对人言，”清之世宗，事无一可对人
 言，以视乃父之宽仁，盖相去远矣。
 <p><hr>
-<center><A HREF="030.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="032.htm">下一回</A></center>
+<center><A HREF="030.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="032.htm">下一回</A></center>
 
 </body>
 </html>
