--- a/ebooks/history_yy/qingshiyanyi/032.htm
+++ b/ebooks/history_yy/qingshiyanyi/032.htm
@@ -148,7 +148,7 @@
 辱其兄弟，与辱己何异，与辱及祖考又何异。虽利口喋喋，多见其忍心害理而已。作者仅录
 硃谕一道，已如见肺肝，王大臣辈无讥焉。
 <p><hr>
-<center><A HREF="031.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="033.htm">下一回</A></center>
+<center><A HREF="031.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="033.htm">下一回</A></center>
 
 </body>
 </html>
