--- a/ebooks/history_yy/qingshiyanyi/034.htm
+++ b/ebooks/history_yy/qingshiyanyi/034.htm
@@ -165,7 +165,7 @@
 万不可少也。世宗自矜明察，而所用未必皆材，且反以明察亡身，蒲留仙《聊斋志异》载有
 侠女一则、或说即吕四娘轶事，信如斯言，精明之中，须含浑厚，毋徒效世宗之察察为也。
 <p><hr>
-<center><A HREF="033.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="035.htm">下一回</A></center>
+<center><A HREF="033.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="035.htm">下一回</A></center>
 
 </body>
 </html>
