--- a/ebooks/history_yy/qingshiyanyi/035.htm
+++ b/ebooks/history_yy/qingshiyanyi/035.htm
@@ -174,7 +174,7 @@
 洋，而最后尾声，则又写得哀痛动人。欢容变作啼容，好景无非幻景，读此可以悟往复平陂
 之理。
 <p><hr>
-<center><A HREF="034.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="036.htm">下一回</A></center>
+<center><A HREF="034.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="036.htm">下一回</A></center>
 
 </body>
 </html>
