--- a/ebooks/history_yy/qingshiyanyi/036.htm
+++ b/ebooks/history_yy/qingshiyanyi/036.htm
@@ -195,7 +195,7 @@
 叙金川战事，实隐指高宗刑赏之失宜。至良尔吉蔑兄盗嫂，阿扣背夫淫叔，不过作为渲染词
 料，然其后授首军前，揭竿示众，亦可见天道祸淫之报，于世道人心，不无裨益云。
 <p><hr>
-<center><A HREF="035.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="037.htm">下一回</A></center>
+<center><A HREF="035.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="037.htm">下一回</A></center>
 
 </body>
 </html>
