--- a/ebooks/history_yy/qingshiyanyi/037.htm
+++ b/ebooks/history_yy/qingshiyanyi/037.htm
@@ -177,7 +177,7 @@
 象，阿睦撤纳来降，乃是适逢其会，是阿睦撤纳亦一宾也，达瓦齐则成为宾中宾矣。阅者当
 如此体会，方见作书人本旨。
 <p><hr>
-<center><A HREF="036.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="038.htm">下一回</A></center>
+<center><A HREF="036.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="038.htm">下一回</A></center>
 
 </body>
 </html>
