--- a/ebooks/history_yy/qingshiyanyi/039.htm
+++ b/ebooks/history_yy/qingshiyanyi/039.htm
@@ -196,7 +196,7 @@
 蠹吏盈边，清室盖中衰矣。明瑞猛将，孤军征缅，徒自丧躯，可为太息。高宗不悟，犹以好
 大喜功为事，其亦可以已乎。
 <p><hr>
-<center><A HREF="038.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="040.htm">下一回</A></center>
+<center><A HREF="038.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="040.htm">下一回</A></center>
 
 </body>
 </html>
