--- a/ebooks/history_yy/qingshiyanyi/040.htm
+++ b/ebooks/history_yy/qingshiyanyi/040.htm
@@ -156,7 +156,7 @@
 温福之不幸，即所以成傅、阿二人之幸耳。傅、阿二人殁，嗣后有名将，少福将，故乾隆朝
 为清室极盛时代，亦即清室中衰时代。此回传傅、阿二人事，实隐伏清史关键云。
 <p><hr>
-<center><A HREF="039.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="041.htm">下一回</A></center>
+<center><A HREF="039.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="041.htm">下一回</A></center>
 
 </body>
 </html>
