--- a/ebooks/history_yy/qingshiyanyi/042.htm
+++ b/ebooks/history_yy/qingshiyanyi/042.htm
@@ -176,7 +176,7 @@
 宗之福，果不逮高宗？若酿之也久，则发之也烈，谁为之？孰令致之？吾则曰惟和珅，吾又
 曰惟清高宗。本回处处指斥和珅，即处处揭橥高宗。用人不慎，一至于此，固后世之殷鉴也。
 <p><hr>
-<center><A HREF="041.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="043.htm">下一回</A></center>
+<center><A HREF="041.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="043.htm">下一回</A></center>
 
 </body>
 </html>
