--- a/ebooks/history_yy/qingshiyanyi/044.htm
+++ b/ebooks/history_yy/qingshiyanyi/044.htm
@@ -183,7 +183,7 @@
 没，贪官污吏之结局如此。后之身为公仆者，亦何不奉为殷鉴耶？炎炎者灭，隆隆者绝，况
 为贪官？况为污吏？读此回，可为居官鉴。
 <p><hr>
-<center><A HREF="043.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="045.htm">下一回</A></center>
+<center><A HREF="043.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="045.htm">下一回</A></center>
 
 </body>
 </html>
