--- a/ebooks/history_yy/qingshiyanyi/045.htm
+++ b/ebooks/history_yy/qingshiyanyi/045.htm
@@ -192,7 +192,7 @@
 德楞泰之得建奇功，莫非元首知人之效，然七年劳役，万众遭殃，不待洪杨之变，而清室衰
 兆见矣。故善读满史者，皆以高宗之末为清室盛衰关键云。
 <p><hr>
-<center><A HREF="044.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="046.htm">下一回</A></center>
+<center><A HREF="044.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="046.htm">下一回</A></center>
 
 </body>
 </html>
