--- a/ebooks/history_yy/qingshiyanyi/046.htm
+++ b/ebooks/history_yy/qingshiyanyi/046.htm
@@ -181,7 +181,7 @@
 难，见于嘉庆朝，后人或目为专制之毒，实则不仅专制而已。汉人十语，不及满人一语，即
 为本回中眼目。德楞泰已负杨芳，后且求如德楞泰者，尚不可得，此汉满之所以终成水火也。
 <p><hr>
-<center><A HREF="045.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="047.htm">下一回</A></center>
+<center><A HREF="045.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="047.htm">下一回</A></center>
 
 </body>
 </html>
