--- a/ebooks/history_yy/qingshiyanyi/047.htm
+++ b/ebooks/history_yy/qingshiyanyi/047.htm
@@ -204,7 +204,7 @@
 廷大吏，所司何事？嘉庆帝西巡北幸，方自鸣得意，而抑知变患生于肘腋，干戈伏于萧墙，
 一经爆发，几至倾家亡国，其祸固若是其酷也。展卷读之，令人感慨不置。
 <p><hr>
-<center><A HREF="046.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="048.htm">下一回</A></center>
+<center><A HREF="046.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="048.htm">下一回</A></center>
 
 </body>
 </html>
