--- a/ebooks/history_yy/qingshiyanyi/048.htm
+++ b/ebooks/history_yy/qingshiyanyi/048.htm
@@ -180,7 +180,7 @@
 有余，治国不足。内如裕兴，外如斌静，荒淫失德，宁知体黼座深衷，随时返省乎？读此
 回，可以知人君务末之非计。
 <p><hr>
-<center><A HREF="047.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="049.htm">下一回</A></center>
+<center><A HREF="047.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="049.htm">下一回</A></center>
 
 </body>
 </html>
