--- a/ebooks/history_yy/qingshiyanyi/050.htm
+++ b/ebooks/history_yy/qingshiyanyi/050.htm
@@ -200,7 +200,7 @@
 平，宣宗愈骄，朝臣愈佞，上下愈以欺饰为务，而中国始多难，本回固一束上起下之转捩文
 也。
 <p><hr>
-<center><A HREF="049.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="051.htm">下一回</A></center>
+<center><A HREF="049.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="051.htm">下一回</A></center>
 
 </body>
 </html>
