--- a/ebooks/history_yy/qingshiyanyi/051.htm
+++ b/ebooks/history_yy/qingshiyanyi/051.htm
@@ -177,7 +177,7 @@
 兄弟，以御于家邦。”刑于之化未端，无怪家邦之多事也。本回前后叙事，截然不同，而从
 夹缝中窥入隐微，实足互勘对证，宣宗之为君可知矣。
 <p><hr>
-<center><A HREF="050.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="052.htm">下一回</A></center>
+<center><A HREF="050.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="052.htm">下一回</A></center>
 
 </body>
 </html>
