--- a/ebooks/history_yy/qingshiyanyi/052.htm
+++ b/ebooks/history_yy/qingshiyanyi/052.htm
@@ -205,7 +205,7 @@
 则固谓在彼不在此也。琦善奸党，右穆左林，隳车实，长寇仇，莫此为甚。读此回，令人惋
 惜，又令人愤激；虽本事实之不平，亦由抑扬之得体。
 <p><hr>
-<center><A HREF="051.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="053.htm">下一回</A></center>
+<center><A HREF="051.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="053.htm">下一回</A></center>
 
 </body>
 </html>
