--- a/ebooks/history_yy/qingshiyanyi/053.htm
+++ b/ebooks/history_yy/qingshiyanyi/053.htm
@@ -198,7 +198,7 @@
 奏之被斥，尤为之一惜。至城下乞盟，愿允四款，更不禁涕泪交垂矣。书中自成波澜，阅者
 心目中，应亦辘轳不置。
 <p><hr>
-<center><A HREF="052.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="054.htm">下一回</A></center>
+<center><A HREF="052.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="054.htm">下一回</A></center>
 
 </body>
 </html>
