--- a/ebooks/history_yy/qingshiyanyi/054.htm
+++ b/ebooks/history_yy/qingshiyanyi/054.htm
@@ -188,7 +188,7 @@
 守之城，以两端怀异之人，授以险要必争之地。用隋侯珠，弹千仞雀，卒至两城迭陷，力竭
 躯捐，虽曰见危授命，于国事究何补焉？故忠固足悯，忠而愚，盖不能无疵云。
 <p><hr>
-<center><A HREF="053.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="055.htm">下一回</A></center>
+<center><A HREF="053.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="055.htm">下一回</A></center>
 
 </body>
 </html>
