--- a/ebooks/history_yy/qingshiyanyi/055.htm
+++ b/ebooks/history_yy/qingshiyanyi/055.htm
@@ -156,7 +156,7 @@
 殆不可胜诛矣。本回于朱、陈战状，极力形容，即所以甚弈经、牛鉴之罪。旁及死事诸将
 弁，及殉节诸工役妇女，尤足愧煞庸奴。
 <p><hr>
-<center><A HREF="054.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="056.htm">下一回</A></center>
+<center><A HREF="054.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="056.htm">下一回</A></center>
 
 </body>
 </html>
