--- a/ebooks/history_yy/qingshiyanyi/056.htm
+++ b/ebooks/history_yy/qingshiyanyi/056.htm
@@ -186,7 +186,7 @@
 事。虎头蛇尾，能毋为外人窥破耶？本回写牛鉴，写伊里布，写耆英，暗中实写宣宗。语重
 心长，隐含无数感慨。
 <p><hr>
-<center><A HREF="055.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="057.htm">下一回</A></center>
+<center><A HREF="055.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="057.htm">下一回</A></center>
 
 </body>
 </html>
