--- a/ebooks/history_yy/qingshiyanyi/057.htm
+++ b/ebooks/history_yy/qingshiyanyi/057.htm
@@ -179,7 +179,7 @@
 不可常用。本回于台、粤民气，写得十分充足，实为后文反击张本。满必招损，骄且致败，
 作者已寓有微词矣。
 <p><hr>
-<center><A HREF="056.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="058.htm">下一回</A></center>
+<center><A HREF="056.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="058.htm">下一回</A></center>
 
 </body>
 </html>
