--- a/ebooks/history_yy/qingshiyanyi/062.htm
+++ b/ebooks/history_yy/qingshiyanyi/062.htm
@@ -169,7 +169,7 @@
 <p>
 　　著书人秉公褒贬，无私无枉，笔致曲折淋漓，犹其余事。
 <p><hr>
-<center><A HREF="061.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="063.htm">下一回</A></center>
+<center><A HREF="061.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="063.htm">下一回</A></center>
 
 </body>
 </html>
