--- a/ebooks/history_yy/qingshiyanyi/063.htm
+++ b/ebooks/history_yy/qingshiyanyi/063.htm
@@ -177,7 +177,7 @@
 未可料。不此之图，徒令林、李两头目，孤军图河，至京畿被困，已挽救无方，林、李死而
 洪氏已亡其半矣。读此回已见洪氏子之必亡。
 <p><hr>
-<center><A HREF="062.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="064.htm">下一回</A></center>
+<center><A HREF="062.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="064.htm">下一回</A></center>
 
 </body>
 </html>
