--- a/ebooks/history_yy/qingshiyanyi/065.htm
+++ b/ebooks/history_yy/qingshiyanyi/065.htm
@@ -188,7 +188,7 @@
 是殆所谓巾帼而须眉者非耶？林公家法，可于其女见之。是回为名士杰女合传，可以作士
 气，可以当女箴。
 <p><hr>
-<center><A HREF="064.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="066.htm">下一回</A></center>
+<center><A HREF="064.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="066.htm">下一回</A></center>
 
 </body>
 </html>
