--- a/ebooks/history_yy/qingshiyanyi/066.htm
+++ b/ebooks/history_yy/qingshiyanyi/066.htm
@@ -192,7 +192,7 @@
 解，向荣殁，曾国藩被困南昌，洪氏正可乘势而逞，天下事，未可知也。本回前半截叙向营
 之被陷，有以见专阃之非才，后半截叙韦、杨之自残，有以见剧盗之必灭。
 <p><hr>
-<center><A HREF="065.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="067.htm">下一回</A></center>
+<center><A HREF="065.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="067.htm">下一回</A></center>
 
 </body>
 </html>
