--- a/ebooks/history_yy/qingshiyanyi/067.htm
+++ b/ebooks/history_yy/qingshiyanyi/067.htm
@@ -216,7 +216,7 @@
 一愚字而已。且一智者在前，则众智毕集，彭、李诸人之为杨辅是也。一愚者在上，则众愚
 亦俱至，穆、柏诸人之为叶辅是也。此回前后分叙，一智一愚，不辨自明。
 <p><hr>
-<center><A HREF="066.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="068.htm">下一回</A></center>
+<center><A HREF="066.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="068.htm">下一回</A></center>
 
 </body>
 </html>
