--- a/ebooks/history_yy/qingshiyanyi/069.htm
+++ b/ebooks/history_yy/qingshiyanyi/069.htm
@@ -154,7 +154,7 @@
 惧者，攻其所必救，兵法固然，无能避也。和春顿兵城下，蹈向荣覆辙，而骄蹇且过之。师
 劳必惰，将骄必败，大营之溃，固意中事，所惜者亡一良将耳。读是回，可知行军之得失。
 <p><hr>
-<center><A HREF="068.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="070.htm">下一回</A></center>
+<center><A HREF="068.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="070.htm">下一回</A></center>
 
 </body>
 </html>
