--- a/ebooks/history_yy/qingshiyanyi/070.htm
+++ b/ebooks/history_yy/qingshiyanyi/070.htm
@@ -187,7 +187,7 @@
 盟，偿款不足，则益之，商埠不足，则增之，增之益之而又不足，则割地以畀之。谁秉国
 政，辨不早辨耶？长沙尚在，当不至痛哭流涕长太息而已。
 <p><hr>
-<center><A HREF="069.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="071.htm">下一回</A></center>
+<center><A HREF="069.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="071.htm">下一回</A></center>
 
 </body>
 </html>
