--- a/ebooks/history_yy/qingshiyanyi/071.htm
+++ b/ebooks/history_yy/qingshiyanyi/071.htm
@@ -184,7 +184,7 @@
 反受制于妇人之手，宁非可媿？惟慈禧心性之敏，口给之长，计虑之深，手段之辣，于本回
 中已崭然毕露。吴道子摹孔子像，道貌如生，作者殆亦具吴道子之腕力矣乎？
 <p><hr>
-<center><A HREF="070.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="072.htm">下一回</A></center>
+<center><A HREF="070.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="072.htm">下一回</A></center>
 
 </body>
 </html>
