--- a/ebooks/history_yy/qingshiyanyi/072.htm
+++ b/ebooks/history_yy/qingshiyanyi/072.htm
@@ -195,7 +195,7 @@
 杰姨卢氏云：“吾止有一子，不愿使事女主”，令曾公闻之，得毋为之汗颜乎？若以剿灭长
 毛，目为汉贼，吾尚无取此说云。
 <p><hr>
-<center><A HREF="071.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="073.htm">下一回</A></center>
+<center><A HREF="071.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="073.htm">下一回</A></center>
 
 </body>
 </html>
