--- a/ebooks/history_yy/qingshiyanyi/073.htm
+++ b/ebooks/history_yy/qingshiyanyi/073.htm
@@ -182,7 +182,7 @@
 而蹶，苻坚至淝水而挫，宁特一秀成然哉？若借洋将，杀降酋，第一时权宜之策耳，不足以
 为训。
 <p><hr>
-<center><A HREF="072.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="074.htm">下一回</A></center>
+<center><A HREF="072.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="074.htm">下一回</A></center>
 
 </body>
 </html>
