--- a/ebooks/history_yy/qingshiyanyi/075.htm
+++ b/ebooks/history_yy/qingshiyanyi/075.htm
@@ -202,7 +202,7 @@
 殁曹南。盖有勇无谋，以致于此。曾李二公，更事既多，行军自慎，读其奏疏，不啻举二十
 年战事，尽绘纸上，故本回可为轻躁者戒，慎重者勖云。
 <p><hr>
-<center><A HREF="074.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="076.htm">下一回</A></center>
+<center><A HREF="074.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="076.htm">下一回</A></center>
 
 </body>
 </html>
