--- a/ebooks/history_yy/qingshiyanyi/076.htm
+++ b/ebooks/history_yy/qingshiyanyi/076.htm
@@ -167,7 +167,7 @@
 瓦解矣。然非圈地制捻之计行，则任柱之势不蹙，贵升固捻党耳，岂肯反噬乎。读此回吾服
 李督，吾尤服曾侯。
 <p><hr>
-<center><A HREF="075.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="077.htm">下一回</A></center>
+<center><A HREF="075.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="077.htm">下一回</A></center>
 
 </body>
 </html>
