--- a/ebooks/history_yy/qingshiyanyi/077.htm
+++ b/ebooks/history_yy/qingshiyanyi/077.htm
@@ -152,7 +152,7 @@
 何分之有？著书人仍深斥之，所以遏乱萌，防流弊也。张积中言祇行诡，恶似较浅，而心更
 可诛，故特附入篇中，以垂炯戒。
 <p><hr>
-<center><A HREF="076.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="078.htm">下一回</A></center>
+<center><A HREF="076.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="078.htm">下一回</A></center>
 
 </body>
 </html>
