--- a/ebooks/history_yy/qingshiyanyi/078.htm
+++ b/ebooks/history_yy/qingshiyanyi/078.htm
@@ -213,7 +213,7 @@
 昔时旋战旋和之失耶？予读此回，于前半见丁抚之能刚，于后半见曾侯之能柔，且以见两宫
 垂帘之时，廷旨多满人意，不可谓非慈安之力，谁谓慈安非贤后哉？
 <p><hr>
-<center><A HREF="077.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="079.htm">下一回</A></center>
+<center><A HREF="077.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="079.htm">下一回</A></center>
 
 </body>
 </html>
