--- a/ebooks/history_yy/qingshiyanyi/080.htm
+++ b/ebooks/history_yy/qingshiyanyi/080.htm
@@ -202,7 +202,7 @@
 <p>
 　　吕武以后，应推此人。
 <p><hr>
-<center><A HREF="079.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="081.htm">下一回</A></center>
+<center><A HREF="079.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="081.htm">下一回</A></center>
 
 </body>
 </html>
