--- a/ebooks/history_yy/qingshiyanyi/082.htm
+++ b/ebooks/history_yy/qingshiyanyi/082.htm
@@ -204,7 +204,7 @@
 铃，煞是可笑。曲突徙薪之不早，至于焦头烂额晚矣！迨焦头烂额而仍无效，不且晚之又晚
 耶！谅山失守，马江败绩，焦头烂额，尚且无成。谁司外交，一至于此！读此令人痛惜不置！
 <p><hr>
-<center><A HREF="081.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="083.htm">下一回</A></center>
+<center><A HREF="081.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="083.htm">下一回</A></center>
 
 </body>
 </html>
