--- a/ebooks/history_yy/qingshiyanyi/083.htm
+++ b/ebooks/history_yy/qingshiyanyi/083.htm
@@ -166,7 +166,7 @@
 百步与五十步之比耳。外交无识，宁有善果？越南去，朝鲜危，缅甸暹罗，相继丧失，不得
 谓非合肥之咎。本回实为合肥写照，暗寓讥刺之意。书法不隐，足继董狐直笔矣。
 <p><hr>
-<center><A HREF="082.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="084.htm">下一回</A></center>
+<center><A HREF="082.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="084.htm">下一回</A></center>
 
 </body>
 </html>
