--- a/ebooks/history_yy/qingshiyanyi/085.htm
+++ b/ebooks/history_yy/qingshiyanyi/085.htm
@@ -174,7 +174,7 @@
 事。叙叶志超，叙丁汝昌，无一非为合肥写照。作者固别蓄深意，阅者亦当别具眼光，毋滑
 口读过！
 <p><hr>
-<center><A HREF="084.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="086.htm">下一回</A></center>
+<center><A HREF="084.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="086.htm">下一回</A></center>
 
 </body>
 </html>
