--- a/ebooks/history_yy/qingshiyanyi/086.htm
+++ b/ebooks/history_yy/qingshiyanyi/086.htm
@@ -191,7 +191,7 @@
 挟，贻害无穷，此则合肥最大之咎；而中日一役，全军皆没，其为失固犹浅也。观于此，可
 知恃人不恃己之失计。
 <p><hr>
-<center><A HREF="085.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="087.htm">下一回</A></center>
+<center><A HREF="085.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="087.htm">下一回</A></center>
 
 </body>
 </html>
