--- a/ebooks/history_yy/qingshiyanyi/087.htm
+++ b/ebooks/history_yy/qingshiyanyi/087.htm
@@ -209,7 +209,7 @@
 王？乃欲冒天下之不韪，以皇帝作孤注，甚为计不亦太疏乎？经著书人按事铺叙，随手抑
 扬，益知守旧派固无所逃罪，维新派亦不能免讥。一击不中，十日大索，可恫亦可惜也。
 <p><hr>
-<center><A HREF="086.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="088.htm">下一回</A></center>
+<center><A HREF="086.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="088.htm">下一回</A></center>
 
 </body>
 </html>
