--- a/ebooks/history_yy/qingshiyanyi/088.htm
+++ b/ebooks/history_yy/qingshiyanyi/088.htm
@@ -158,7 +158,7 @@
 激之使然乎？密谋被发，全局推翻，幸则窜迹海邦，不幸则杀身燕市，自危不足，且危及主
 上，危及全国，操切之害，一至于此，吾不能为维新诸子讳矣！
 <p><hr>
-<center><A HREF="087.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="089.htm">下一回</A></center>
+<center><A HREF="087.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="089.htm">下一回</A></center>
 
 </body>
 </html>
