--- a/ebooks/history_yy/qingshiyanyi/089.htm
+++ b/ebooks/history_yy/qingshiyanyi/089.htm
@@ -186,7 +186,7 @@
 均归乌有，而为端王辈所播弄，开古今未有之大祸，斯即欲为慈禧讳，要亦无能讳矣。诗
 曰：“哲妇倾城”。妇既哲矣，何故有倾城之祸？观于此而始知诗言之非诬也。
 <p><hr>
-<center><A HREF="088.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="090.htm">下一回</A></center>
+<center><A HREF="088.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="090.htm">下一回</A></center>
 
 </body>
 </html>
