--- a/ebooks/history_yy/qingshiyanyi/090.htm
+++ b/ebooks/history_yy/qingshiyanyi/090.htm
@@ -219,7 +219,7 @@
 孤危。是不然。中国孱弱久矣，宁有以一服八之理？且幸得此督抚之反抗，始得障护东南，
 保全大局，再造之恩，殊不在曾左下。故吾谓清之亡，实皆自满人使之，于汉人无尤焉。
 <p><hr>
-<center><A HREF="089.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="091.htm">下一回</A></center>
+<center><A HREF="089.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="091.htm">下一回</A></center>
 
 </body>
 </html>
