--- a/ebooks/history_yy/qingshiyanyi/091.htm
+++ b/ebooks/history_yy/qingshiyanyi/091.htm
@@ -207,7 +207,7 @@
 不欲因此毙后，必俟瓦解土崩，而后促登冥箓欤？天道无凭若有凭，叶赫亡清之谶，其信也
 夫！
 <p><hr>
-<center><A HREF="090.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="092.htm">下一回</A></center>
+<center><A HREF="090.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="092.htm">下一回</A></center>
 
 </body>
 </html>
