--- a/ebooks/history_yy/qingshiyanyi/092.htm
+++ b/ebooks/history_yy/qingshiyanyi/092.htm
@@ -204,7 +204,7 @@
 爱他人之希旨承颜，自图快活耶？德菱姊妹，尚有学问，非李莲英妹比，故未闻有浊乱宫禁
 之弊，否则不入嬖幸传者几希。
 <p><hr>
-<center><A HREF="091.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="093.htm">下一回</A></center>
+<center><A HREF="091.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="093.htm">下一回</A></center>
 
 </body>
 </html>
