--- a/ebooks/history_yy/qingshiyanyi/093.htm
+++ b/ebooks/history_yy/qingshiyanyi/093.htm
@@ -191,7 +191,7 @@
 国？不过报宿愤，争权势。昔俄以索还辽东抗日本，今日本遂亦以迫还关东抗俄，要之皆利
 我之东三省耳。观此回不能无恨于拳乱，并不能无憾于慈禧后。
 <p><hr>
-<center><A HREF="092.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="094.htm">下一回</A></center>
+<center><A HREF="092.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="094.htm">下一回</A></center>
 
 </body>
 </html>
