--- a/ebooks/history_yy/qingshiyanyi/095.htm
+++ b/ebooks/history_yy/qingshiyanyi/095.htm
@@ -197,7 +197,7 @@
 <p>
 　　书有之：“四海困穷，天禄永终”，信然！
 <p><hr>
-<center><A HREF="094.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="096.htm">下一回</A></center>
+<center><A HREF="094.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="096.htm">下一回</A></center>
 
 </body>
 </html>
