--- a/ebooks/history_yy/qingshiyanyi/098.htm
+++ b/ebooks/history_yy/qingshiyanyi/098.htm
@@ -232,7 +232,7 @@
 军之起，实自天怒人怨致之。檄文一篇，说得淋漓酣鬯，足为吾华生色。而本回叙事，亦气
 势蓬勃，抑扬得当，是固皆好手笔也。
 <p><hr>
-<center><A HREF="097.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="099.htm">下一回</A></center>
+<center><A HREF="097.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="099.htm">下一回</A></center>
 
 </body>
 </html>
