--- a/ebooks/history_yy/qingshiyanyi/099.htm
+++ b/ebooks/history_yy/qingshiyanyi/099.htm
@@ -240,7 +240,7 @@
 致激变，载澧亦不得谓无咎焉。迨各省告警，云集响应，始有宣誓告庙之举，晚矣。故本回
 只据事直书，而瓦解土崩之状，已令人目不胜接，徒有浩叹而已。
 <p><hr>
-<center><A HREF="098.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="100.htm">下一回</A></center>
+<center><A HREF="098.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="100.htm">下一回</A></center>
 
 </body>
 </html>
