--- a/ebooks/history_yy/qingshiyanyi/101.htm
+++ b/ebooks/history_yy/qingshiyanyi/101.htm
@@ -190,7 +190,7 @@
 有间焉。著书人或详或略，若抑若扬，皆斟酌有当，非漫以铺叙见长，成名为小说，实侔良
 史。录一代之兴亡，作后人之借鉴，是固可与列代史策，并传不朽云。
 <p><hr>
-<center><A HREF="100.htm">前一回</a>　　<a href="_content.html">回目录</a></center>
+<center><A HREF="100.htm">前一回</a>　　<a href="content.html">回目录</a></center>
 
 </body>
 </html>
