--- a/ebooks/history_yy/qingshiyanyi/007.htm
+++ b/ebooks/history_yy/qingshiyanyi/007.htm
@@ -160,7 +160,7 @@
 近虚夸，要不得为崇焕咎。满洲所畏者惟崇焕一人而已。本回写满洲太宗处，即是写袁崇焕
 处。
 <p><hr>
-<center><A HREF="006.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="008.htm">下一回</A></center>
+<center><A HREF="006.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="008.htm">下一回</A></center>
 
 </body>
 </html>
