--- a/ebooks/history_yy/qingshiyanyi/014.htm
+++ b/ebooks/history_yy/qingshiyanyi/014.htm
@@ -159,7 +159,7 @@
 亚欤？若多尔衮之经略中原，入关定鼎，亦自吉特太后激厉而来，是又以一妇人之力，肇成
 大统者，孰功孰罪，阅此书者当于夹缝中求之。
 <p><hr>
-<center><A HREF="013.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="015.htm">下一回</A></center>
+<center><A HREF="013.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="015.htm">下一回</A></center>
 
 </body>
 </html>
