--- a/ebooks/history_yy/qingshiyanyi/022.htm
+++ b/ebooks/history_yy/qingshiyanyi/022.htm
@@ -128,7 +128,7 @@
 皇上躬亲大政，伏祈令臣往守先皇帝陵寝，如线余息，得以生全，则臣仰报皇上豢育之恩，
 亦得稍尽。谨此奏闻。
 <p><hr>
-<center><A HREF="021.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="023.htm">下一回</A></center>
+<center><A HREF="021.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="023.htm">下一回</A></center>
 
 </body>
 </html>
