--- a/ebooks/history_yy/qingshiyanyi/026.htm
+++ b/ebooks/history_yy/qingshiyanyi/026.htm
@@ -188,7 +188,7 @@
 瓦解，作者故作简笔，一一收束，愈见灭亡之速。三寸不律，缭绕烟云，忽如万岫迷濛，忽
 如长空迅扫，不可谓非神且奇云。
 <p><hr>
-<center><A HREF="025.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="027.htm">下一回</A></center>
+<center><A HREF="025.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="027.htm">下一回</A></center>
 
 </body>
 </html>
