--- a/ebooks/history_yy/qingshiyanyi/033.htm
+++ b/ebooks/history_yy/qingshiyanyi/033.htm
@@ -178,7 +178,7 @@
 <p>
 　　吕嬴牛马，亶其然乎？
 <p><hr>
-<center><A HREF="032.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="034.htm">下一回</A></center>
+<center><A HREF="032.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="034.htm">下一回</A></center>
 
 </body>
 </html>
