--- a/ebooks/history_yy/qingshiyanyi/038.htm
+++ b/ebooks/history_yy/qingshiyanyi/038.htm
@@ -199,7 +199,7 @@
 <p>
 　　作者亟为表扬，可作彤史一则。
 <p><hr>
-<center><A HREF="037.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="039.htm">下一回</A></center>
+<center><A HREF="037.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="039.htm">下一回</A></center>
 
 </body>
 </html>
