--- a/ebooks/history_yy/qingshiyanyi/043.htm
+++ b/ebooks/history_yy/qingshiyanyi/043.htm
@@ -201,7 +201,7 @@
 蔽，妒功忌能，庸驽进，骐骥退，衰世之兆成矣。君子闻鼓鼙声，则思将帅之臣。读此回，
 应为太息，不第阐幽索隐已也。
 <p><hr>
-<center><A HREF="042.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="044.htm">下一回</A></center>
+<center><A HREF="042.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="044.htm">下一回</A></center>
 
 </body>
 </html>
