--- a/ebooks/history_yy/qingshiyanyi/049.htm
+++ b/ebooks/history_yy/qingshiyanyi/049.htm
@@ -187,7 +187,7 @@
 <p>
 　　二杨固人杰矣哉！
 <p><hr>
-<center><A HREF="048.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="050.htm">下一回</A></center>
+<center><A HREF="048.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="050.htm">下一回</A></center>
 
 </body>
 </html>
