--- a/ebooks/history_yy/qingshiyanyi/058.htm
+++ b/ebooks/history_yy/qingshiyanyi/058.htm
@@ -173,7 +173,7 @@
 有异能，殆权奸当道，小民铤走之所由致也。本回可与五十一回参看，而用笔则详略褒贬，
 具见苦心。
 <p><hr>
-<center><A HREF="057.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="059.htm">下一回</A></center>
+<center><A HREF="057.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="059.htm">下一回</A></center>
 
 </body>
 </html>
