--- a/ebooks/history_yy/qingshiyanyi/061.htm
+++ b/ebooks/history_yy/qingshiyanyi/061.htm
@@ -184,7 +184,7 @@
 无救于亡。故本回为洪杨惜，亦为洪杨病。林凤祥、吉文元辈，犹为本回之宾。项庄舞剑，
 意在汉王，阅者当于言外求之。
 <p><hr>
-<center><A HREF="060.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="062.htm">下一回</A></center>
+<center><A HREF="060.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="062.htm">下一回</A></center>
 
 </body>
 </html>
