--- a/ebooks/history_yy/qingshiyanyi/064.htm
+++ b/ebooks/history_yy/qingshiyanyi/064.htm
@@ -165,7 +165,7 @@
 天，主不德，天数始不能逃也。本回专载清宫事，于咸丰帝之明昧，或抑或扬，隐寓劝惩之
 义，而于前后各回历述战事外，列此一回，尤足令人醒目。
 <p><hr>
-<center><A HREF="063.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="065.htm">下一回</A></center>
+<center><A HREF="063.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="065.htm">下一回</A></center>
 
 </body>
 </html>
