--- a/ebooks/history_yy/qingshiyanyi/068.htm
+++ b/ebooks/history_yy/qingshiyanyi/068.htm
@@ -206,7 +206,7 @@
 外交才，唯唯诺诺以外，无他技也，若曾、胡二公，文足安邦，武能御侮，清之不亡，赖有
 此耳。肃顺官文，吾亦拟诸自郐以下。
 <p><hr>
-<center><A HREF="067.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="069.htm">下一回</A></center>
+<center><A HREF="067.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="069.htm">下一回</A></center>
 
 </body>
 </html>
