--- a/ebooks/history_yy/qingshiyanyi/074.htm
+++ b/ebooks/history_yy/qingshiyanyi/074.htm
@@ -229,7 +229,7 @@
 洪氏子亦其流亚也。江宁一陷，毙长毛十数万众，杀戮固未免太过，抑亦长毛冥顽不灵，自
 致死地，强梁者不得其死，观此益信。
 <p><hr>
-<center><A HREF="073.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="075.htm">下一回</A></center>
+<center><A HREF="073.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="075.htm">下一回</A></center>
 
 </body>
 </html>
