--- a/ebooks/history_yy/qingshiyanyi/079.htm
+++ b/ebooks/history_yy/qingshiyanyi/079.htm
@@ -193,7 +193,7 @@
 少一伟人，已有人亡政息之慨，左岑效绩边陲，反以酿九重之纵欲，外宁必有内忧，朕兆其
 已见乎？故本回事略，作清廷之过渡时代观可也。
 <p><hr>
-<center><A HREF="078.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="080.htm">下一回</A></center>
+<center><A HREF="078.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="080.htm">下一回</A></center>
 
 </body>
 </html>
