--- a/ebooks/history_yy/qingshiyanyi/081.htm
+++ b/ebooks/history_yy/qingshiyanyi/081.htm
@@ -191,7 +191,7 @@
 外交以兵力为后盾，微左公之预筹战备，隐摄强俄，虽如曾袭侯之善于应对，能折冲樽俎
 乎？直臣亡，老成谢，清于是衰且亡矣。人才之不可少也，固如此夫！
 <p><hr>
-<center><A HREF="080.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="082.htm">下一回</A></center>
+<center><A HREF="080.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="082.htm">下一回</A></center>
 
 </body>
 </html>
