--- a/ebooks/history_yy/qingshiyanyi/084.htm
+++ b/ebooks/history_yy/qingshiyanyi/084.htm
@@ -165,7 +165,7 @@
 英，即不啻叙慈禧。清朝二百数十年之国祚，斲丧于李总管一人之手，内监之祸烈矣哉！慈
 禧后殆犹可原焉。
 <p><hr>
-<center><A HREF="083.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="085.htm">下一回</A></center>
+<center><A HREF="083.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="085.htm">下一回</A></center>
 
 </body>
 </html>
