--- a/ebooks/history_yy/qingshiyanyi/094.htm
+++ b/ebooks/history_yy/qingshiyanyi/094.htm
@@ -187,7 +187,7 @@
 之游历，袭取各国皮毛，而即谓吾国立宪，已十得八九，不暇他求，其谁信之？本回依事直
 书，而夹缝中屡寓贬笔，是固所谓皮里阳秋者耶。
 <p><hr>
-<center><A HREF="093.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="095.htm">下一回</A></center>
+<center><A HREF="093.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="095.htm">下一回</A></center>
 
 </body>
 </html>
