--- a/ebooks/history_yy/qingshiyanyi/096.htm
+++ b/ebooks/history_yy/qingshiyanyi/096.htm
@@ -201,7 +201,7 @@
 后熊，影响及仕途军界，清之不亡无几矣。隆裕后尚无亡国之咎，不过慈禧当国数十年，天
 人交怨，特假隆裕以泄其忿耳。慈禧考终，不及见逊位之祸，慈禧其亦幸矣哉！
 <p><hr>
-<center><A HREF="095.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="097.htm">下一回</A></center>
+<center><A HREF="095.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="097.htm">下一回</A></center>
 
 </body>
 </html>
