--- a/ebooks/history_yy/qingshiyanyi/097.htm
+++ b/ebooks/history_yy/qingshiyanyi/097.htm
@@ -224,7 +224,7 @@
 以为无恐矣。抑知败者愈奋，胜者愈骄，革命革命之声喧传海外，虽欲不亡，不可得也。故
 广州一役，人为革党悲，吾为清室惧，天夺之鉴而益其疾，觇国者于此决兴亡焉。
 <p><hr>
-<center><A HREF="096.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="098.htm">下一回</A></center>
+<center><A HREF="096.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="098.htm">下一回</A></center>
 
 </body>
 </html>
