--- a/ebooks/history_yy/qingshiyanyi/100.htm
+++ b/ebooks/history_yy/qingshiyanyi/100.htm
@@ -171,7 +171,7 @@
 京，处危疑交集之秋，尚属从容不迫，其才具已可概见。汉阳一役，明以示威，得汉阳而失
 南京，正袁公之所以巧为处置也。从字句间体察之，可以觇袁大臣之心，可以见著书人之识。
 <p><hr>
-<center><A HREF="099.htm">前一回</a>　　<a href="_content.html">回目录</a>　　<a href="101.htm">下一回</A></center>
+<center><A HREF="099.htm">前一回</a>　　<a href="content.html">回目录</a>　　<a href="101.htm">下一回</A></center>
 
 </body>
 </html>
