--- a/ebooks/modern/history_gy/badahutong/bdht01.html
+++ b/ebooks/modern/history_gy/badahutong/bdht01.html
@@ -1734,5 +1734,5 @@
 　　“也好！”廖衡转脸看着花君老二问：“你听见吴三爷的话没有？”
 <p>
 　　花君老二报以嫣然一笑；一切尽在不言中了。
-<hr><a href="bdht02.html">下一部分</a>  <a href="_content.html">回目录</a>
+<hr><a href="bdht02.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
