--- a/ebooks/modern/history_gy/badahutong/bdht02.html
+++ b/ebooks/modern/history_gy/badahutong/bdht02.html
@@ -1656,5 +1656,5 @@
 <p>
 　　于是，“知实”一忍着笑，又慰劝，又道歉；台上锣鼓复起，好一会才能将局
 面安静下来。
-<hr><a href="bdht03.html">下一部分</a>  <a href="_content.html">回目录</a>
+<hr><a href="bdht03.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
