--- a/ebooks/modern/history_gy/badahutong/bdht03.html
+++ b/ebooks/modern/history_gy/badahutong/bdht03.html
@@ -1881,5 +1881,5 @@
 　　于是吴少霖当天便找到杨仲海，细说经过，托他去找王二谈判；然后打了个电
 话给廖衡，只说尚在进行之中，必可成功，请他宽心。又托词吴景濂派他到天津公
 差，往返约需三天；一切都等他回京之后面谈。
-<hr><a href="bdht04.html">下一部分</a>  <a href="_content.html">回目录</a>
+<hr><a href="bdht04.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
