--- a/ebooks/modern/history_gy/badahutong/bdht04.html
+++ b/ebooks/modern/history_gy/badahutong/bdht04.html
@@ -1472,5 +1472,5 @@
 <p>
 　　回到王家，他将这个想法跟王克敏去谈；王克敏劝他不必多事，因为吃力不讨
 好，明知吴佩孚不服段祺瑞；段祺瑞轻视吴佩孚，何必去干这种徒劳无功的事？
-<hr><a href="bdht05.html">下一部分</a>  <a href="_content.html">回目录</a>
+<hr><a href="bdht05.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
