--- a/ebooks/modern/history_gy/badahutong/bdht05.html
+++ b/ebooks/modern/history_gy/badahutong/bdht05.html
@@ -266,5 +266,5 @@
 孚，只不知“金坛”是谁？后来是联军指挥部的作战科主任指出，清朝小学名家段
 玉裁是江苏金坛人，金坛必指段祺瑞；这当然是千真万确的消息，一百六十万日圆
 的“威力”，终于发生了。
-<hr><a href="bdht06.html">下一部分</a>  <a href="_content.html">回目录</a>
+<hr><a href="bdht06.html">下一部分</a>  <a href="content.html">回目录</a>
 </body></html>
