--- a/ebooks/modern/history_gy/badahutong/bdht06.html
+++ b/ebooks/modern/history_gy/badahutong/bdht06.html
@@ -631,5 +631,5 @@
 天，他不提这话了，因为溥仪已经逃入日本公使馆；是不是会生什么后患，不得而
 知；而驱逐溥仪出宫，并无一个适当的处置，这件事是不是做对了，当然亦大成疑
 问。
-<hr><a href="_content.html">回目录</a>
+<hr><a href="content.html">回目录</a>
 </body></html>
